--- a/src/index.scss
+++ b/src/index.scss
@@ -1,1 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@800&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Nunito', sans-serif;
+  font-weight: 800;
+  font-style: normal;
+}
